--- a/teste01/estilo/style.css
+++ b/teste01/estilo/style.css
@@ -32,11 +32,12 @@ header{
 header h1{
     color: white;
     font-family: Georgia, 'Times New Roman', Times, serif;
-    font-size: 3em;
+    font-size: 2.9em;
     font-weight: normal;
     text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.136);
     margin-bottom: 10px;
-}
+    padding-bottom: 5px;
+}    
 
 header p{
     color: white;
@@ -45,6 +46,7 @@ header p{
     max-width: 500px;
     padding-right: 10px ;
     padding-left: 10px;
+    padding-bottom: 50px;
     margin: auto;
     text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.136);
 }
@@ -229,7 +231,7 @@ footer{
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.330);
 }
 footer > p{
-    font-size: 1em;
+    font-size: 0.9em;
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-weight: normal;
     text-align: center;
